--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
     "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
     "hjs": "~0.0.6",
-    "soap": "*",
-    "nimble": "*",
-    "formidable": "*"
+    "async": "*"
   }
 }
